--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "express-validator": "^7.2.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
